// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bars [common] example testing should match snapshot(s) for basic 1`] = `
<g
  className="lucid-Bars"
>
  <g
    key="0"
  >
    <Bar
      color="color-chart-0"
      height={20}
      key="0"
      width={38}
      x={1}
      y={380}
    />
    <Bar
      color="color-chart-1"
      height={40}
      key="1"
      width={38}
      x={39}
      y={360}
    />
    <Bar
      color="color-chart-2"
      height={60}
      key="2"
      width={38}
      x={77}
      y={340}
    />
    <Bar
      color="color-chart-3"
      height={100}
      key="3"
      width={38}
      x={115}
      y={300}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={100}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={1}
          y={300}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        one
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 1
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 5
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="1"
  >
    <Bar
      color="color-chart-0"
      height={40}
      key="0"
      width={38}
      x={170}
      y={360}
    />
    <Bar
      color="color-chart-1"
      height={60}
      key="1"
      width={38}
      x={208}
      y={340}
    />
    <Bar
      color="color-chart-2"
      height={80}
      key="2"
      width={38}
      x={246}
      y={320}
    />
    <Bar
      color="color-chart-3"
      height={120}
      key="3"
      width={38}
      x={284}
      y={280}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={120}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={170}
          y={280}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        two
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 6
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="2"
  >
    <Bar
      color="color-chart-0"
      height={40}
      key="0"
      width={38}
      x={339}
      y={360}
    />
    <Bar
      color="color-chart-1"
      height={80}
      key="1"
      width={38}
      x={377}
      y={320}
    />
    <Bar
      color="color-chart-2"
      height={100}
      key="2"
      width={38}
      x={415}
      y={300}
    />
    <Bar
      color="color-chart-3"
      height={120}
      key="3"
      width={38}
      x={453}
      y={280}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={120}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={339}
          y={280}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        three
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 5
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 6
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="3"
  >
    <Bar
      color="color-chart-0"
      height={60}
      key="0"
      width={38}
      x={508}
      y={340}
    />
    <Bar
      color="color-chart-1"
      height={120}
      key="1"
      width={38}
      x={546}
      y={280}
    />
    <Bar
      color="color-chart-2"
      height={140}
      key="2"
      width={38}
      x={584}
      y={260}
    />
    <Bar
      color="color-chart-3"
      height={140}
      key="3"
      width={38}
      x={622}
      y={260}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={140}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={508}
          y={260}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        four
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 6
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 7
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 7
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="4"
  >
    <Bar
      color="color-chart-0"
      height={80}
      key="0"
      width={38}
      x={677}
      y={320}
    />
    <Bar
      color="color-chart-1"
      height={160}
      key="1"
      width={38}
      x={715}
      y={240}
    />
    <Bar
      color="color-chart-2"
      height={180}
      key="2"
      width={38}
      x={753}
      y={220}
    />
    <Bar
      color="color-chart-3"
      height={160}
      key="3"
      width={38}
      x={791}
      y={240}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={180}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={677}
          y={220}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        five
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 8
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 9
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 8
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="5"
  >
    <Bar
      color="color-chart-0"
      height={400}
      key="0"
      width={38}
      x={846}
      y={0}
    />
    <Bar
      color="color-chart-1"
      height={160}
      key="1"
      width={38}
      x={884}
      y={240}
    />
    <Bar
      color="color-chart-2"
      height={180}
      key="2"
      width={38}
      x={922}
      y={220}
    />
    <Bar
      color="color-chart-3"
      height={20}
      key="3"
      width={38}
      x={960}
      y={380}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={400}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={846}
          y={0}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        six
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 20
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 8
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 9
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 1
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
</g>
`;

exports[`Bars [common] example testing should match snapshot(s) for basic 2`] = `
<g
  className="lucid-Bars"
>
  <g
    key="0"
  >
    <Bar
      color="color-chart-0"
      height={10.5263157894737}
      key="0"
      width={152}
      x={1}
      y={389.4736842105263}
    />
    <Bar
      color="color-chart-1"
      height={21.05263157894734}
      key="1"
      width={152}
      x={1}
      y={368.42105263157896}
    />
    <Bar
      color="color-chart-2"
      height={31.57894736842104}
      key="2"
      width={152}
      x={1}
      y={336.8421052631579}
    />
    <Bar
      color="color-chart-3"
      height={52.63157894736844}
      key="3"
      width={152}
      x={1}
      y={284.2105263157895}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={115.78947368421052}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={1}
          y={284.2105263157895}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        one
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={true}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 1
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 5
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="1"
  >
    <Bar
      color="color-chart-0"
      height={21.05263157894734}
      key="0"
      width={152}
      x={170}
      y={378.94736842105266}
    />
    <Bar
      color="color-chart-1"
      height={31.578947368421098}
      key="1"
      width={152}
      x={170}
      y={347.36842105263156}
    />
    <Bar
      color="color-chart-2"
      height={42.10526315789468}
      key="2"
      width={152}
      x={170}
      y={305.2631578947369}
    />
    <Bar
      color="color-chart-3"
      height={63.15789473684214}
      key="3"
      width={152}
      x={170}
      y={242.10526315789474}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={157.89473684210526}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={170}
          y={242.10526315789474}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        two
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={true}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 6
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="2"
  >
    <Bar
      color="color-chart-0"
      height={21.05263157894734}
      key="0"
      width={152}
      x={339}
      y={378.94736842105266}
    />
    <Bar
      color="color-chart-1"
      height={42.10526315789474}
      key="1"
      width={152}
      x={339}
      y={336.8421052631579}
    />
    <Bar
      color="color-chart-2"
      height={52.63157894736844}
      key="2"
      width={152}
      x={339}
      y={284.2105263157895}
    />
    <Bar
      color="color-chart-3"
      height={63.15789473684211}
      key="3"
      width={152}
      x={339}
      y={221.05263157894737}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={178.94736842105263}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={339}
          y={221.05263157894737}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        three
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={true}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 5
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 6
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="3"
  >
    <Bar
      color="color-chart-0"
      height={31.57894736842104}
      key="0"
      width={152}
      x={508}
      y={368.42105263157896}
    />
    <Bar
      color="color-chart-1"
      height={63.15789473684208}
      key="1"
      width={152}
      x={508}
      y={305.2631578947369}
    />
    <Bar
      color="color-chart-2"
      height={73.68421052631581}
      key="2"
      width={152}
      x={508}
      y={231.57894736842107}
    />
    <Bar
      color="color-chart-3"
      height={73.68421052631581}
      key="3"
      width={152}
      x={508}
      y={157.89473684210526}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={242.10526315789474}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={508}
          y={157.89473684210526}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        four
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={true}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 6
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 7
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 7
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="4"
  >
    <Bar
      color="color-chart-0"
      height={42.10526315789474}
      key="0"
      width={152}
      x={677}
      y={357.89473684210526}
    />
    <Bar
      color="color-chart-1"
      height={84.21052631578948}
      key="1"
      width={152}
      x={677}
      y={273.6842105263158}
    />
    <Bar
      color="color-chart-2"
      height={94.73684210526318}
      key="2"
      width={152}
      x={677}
      y={178.9473684210526}
    />
    <Bar
      color="color-chart-3"
      height={84.21052631578948}
      key="3"
      width={152}
      x={677}
      y={94.73684210526312}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={305.2631578947369}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={677}
          y={94.73684210526312}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        five
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={true}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 8
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 9
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 8
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="5"
  >
    <Bar
      color="color-chart-0"
      height={210.52631578947367}
      key="0"
      width={152}
      x={846}
      y={189.47368421052633}
    />
    <Bar
      color="color-chart-1"
      height={84.21052631578945}
      key="1"
      width={152}
      x={846}
      y={105.26315789473688}
    />
    <Bar
      color="color-chart-2"
      height={94.73684210526318}
      key="2"
      width={152}
      x={846}
      y={10.5263157894737}
    />
    <Bar
      color="color-chart-3"
      height={10.5263157894737}
      key="3"
      width={152}
      x={846}
      y={0}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={400}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={846}
          y={0}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        six
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={true}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-0"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 20
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 8
          </Legend.Item>
          <Legend.Item
            color="color-chart-2"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 9
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 1
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
</g>
`;

exports[`Bars [common] example testing should match snapshot(s) for custom-colors 1`] = `
<g
  className="lucid-Bars"
>
  <g
    key="0"
  >
    <Bar
      color="color-chart-good"
      height={20}
      key="0"
      width={38}
      x={1}
      y={380}
    />
    <Bar
      color="color-chart-1"
      height={40}
      key="1"
      width={38}
      x={39}
      y={360}
    />
    <Bar
      color="color-chart-bad"
      height={60}
      key="2"
      width={38}
      x={77}
      y={340}
    />
    <Bar
      color="color-chart-3"
      height={100}
      key="3"
      width={38}
      x={115}
      y={300}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={100}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={1}
          y={300}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        one
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-good"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 1
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-bad"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 5
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="1"
  >
    <Bar
      color="color-chart-good"
      height={40}
      key="0"
      width={38}
      x={170}
      y={360}
    />
    <Bar
      color="color-chart-1"
      height={60}
      key="1"
      width={38}
      x={208}
      y={340}
    />
    <Bar
      color="color-chart-bad"
      height={80}
      key="2"
      width={38}
      x={246}
      y={320}
    />
    <Bar
      color="color-chart-3"
      height={120}
      key="3"
      width={38}
      x={284}
      y={280}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={120}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={170}
          y={280}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        two
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-good"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-bad"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 6
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="2"
  >
    <Bar
      color="color-chart-good"
      height={40}
      key="0"
      width={38}
      x={339}
      y={360}
    />
    <Bar
      color="color-chart-1"
      height={80}
      key="1"
      width={38}
      x={377}
      y={320}
    />
    <Bar
      color="color-chart-bad"
      height={100}
      key="2"
      width={38}
      x={415}
      y={300}
    />
    <Bar
      color="color-chart-3"
      height={120}
      key="3"
      width={38}
      x={453}
      y={280}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={120}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={339}
          y={280}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        three
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-good"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 2
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-bad"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 5
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 6
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="3"
  >
    <Bar
      color="color-chart-good"
      height={60}
      key="0"
      width={38}
      x={508}
      y={340}
    />
    <Bar
      color="color-chart-1"
      height={120}
      key="1"
      width={38}
      x={546}
      y={280}
    />
    <Bar
      color="color-chart-bad"
      height={140}
      key="2"
      width={38}
      x={584}
      y={260}
    />
    <Bar
      color="color-chart-3"
      height={140}
      key="3"
      width={38}
      x={622}
      y={260}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={140}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={508}
          y={260}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        four
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-good"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 3
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 6
          </Legend.Item>
          <Legend.Item
            color="color-chart-bad"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 7
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 7
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="4"
  >
    <Bar
      color="color-chart-good"
      height={80}
      key="0"
      width={38}
      x={677}
      y={320}
    />
    <Bar
      color="color-chart-1"
      height={160}
      key="1"
      width={38}
      x={715}
      y={240}
    />
    <Bar
      color="color-chart-bad"
      height={180}
      key="2"
      width={38}
      x={753}
      y={220}
    />
    <Bar
      color="color-chart-3"
      height={160}
      key="3"
      width={38}
      x={791}
      y={240}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={180}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={677}
          y={220}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        five
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-good"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 4
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 8
          </Legend.Item>
          <Legend.Item
            color="color-chart-bad"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 9
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 8
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
  <g
    key="5"
  >
    <Bar
      color="color-chart-good"
      height={400}
      key="0"
      width={38}
      x={846}
      y={0}
    />
    <Bar
      color="color-chart-1"
      height={160}
      key="1"
      width={38}
      x={884}
      y={240}
    />
    <Bar
      color="color-chart-bad"
      height={180}
      key="2"
      width={38}
      x={922}
      y={220}
    />
    <Bar
      color="color-chart-3"
      height={20}
      key="3"
      width={38}
      x={960}
      y={380}
    />
    <ToolTip
      alignment="center"
      direction="up"
      flyOutMaxWidth="none"
      flyOutStyle={Object {}}
      isCloseable={false}
      isExpanded={false}
      kind="default"
      onClose={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      portalId={null}
    >
      <ToolTip.Target
        elementType="g"
      >
        <rect
          className="lucid-Bars-tooltip-hover-zone"
          height={400}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={152}
          x={846}
          y={0}
        />
      </ToolTip.Target>
      <ToolTip.Title>
        six
      </ToolTip.Title>
      <ToolTip.Body>
        <Legend
          hasBorders={false}
          isReversed={false}
          orient="vertical"
        >
          <Legend.Item
            color="color-chart-good"
            hasPoint={true}
            key="0"
            pointKind={1}
          >
            y0: 20
          </Legend.Item>
          <Legend.Item
            color="color-chart-1"
            hasPoint={true}
            key="1"
            pointKind={1}
          >
            y1: 8
          </Legend.Item>
          <Legend.Item
            color="color-chart-bad"
            hasPoint={true}
            key="2"
            pointKind={1}
          >
            y2: 9
          </Legend.Item>
          <Legend.Item
            color="color-chart-3"
            hasPoint={true}
            key="3"
            pointKind={1}
          >
            y3: 1
          </Legend.Item>
        </Legend>
      </ToolTip.Body>
    </ToolTip>
  </g>
</g>
`;
